--- a/Untitled-1.tex
+++ b/Untitled-1.tex
@@ -4,7 +4,7 @@
 \date{\today}
 \maketitle
 \begin{document}
-hello everry one 
+hello everry one i am amira
    \begin{itemize}
      \item amira 
      \item chaima 
