--- a/test2.tex
+++ b/test2.tex
@@ -1,9 +1,14 @@
-\documentclass[11pt, a4paper]{article}
-\usepackage[space]{ctex}
-\title{LaTeX البدء السريع}
-\author{amira}
+\documentclass[a4paper,12pt]{book}
+\usepackage[english]{babel}
+\title{My First Document}
+\author{projet fin d etude}
 \date{\today}
-\begin{document}
 \maketitle
- مرحبا! لاتكس.
+\begin{document}
+\chapter{chapter1}
+\section{section 1 }
+\section{section 2}
+\subsection{subsection 1}
+\subsection{subsection 2}
+\section{section 3}
 \end{document}
